fix: adapt 11.5.0 tests to Java 11
- convert text blocks to string concatenation (verified byte for byte by
  compiling both forms with javac 17 and javac 11 and comparing the values)
- replace String.formatted() with String.format()
- replace Stream.toList() with Collectors.toUnmodifiableList()
- replace pattern matching for instanceof with explicit casts
- restore the assertTrue import in SpoonPomTest that was lost in the merge